<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="home_title">Tic</string>
    <string name="hm_tle">Tac</string>
    <string name="title">Toe</string>
    <string name="des">X</string>
    <string name="des2">O</string>
    <string name="playButton">Play</string>

    <string name="PlayerSetupTitle">Enter a Name</string>
    <string name="Label1">Player1</string>
    <string name="Label2">Player2</string>
    <string name="Versus">VS</string>
    <string name="SubmitButton">Submit Names</string>
    <string name="NameHint">Enter Your Name</string>

    <string name="PlayAgainButton">Play Again</string>
    <string name="HomeButton">Home</string>
</resources>